# drei

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.org  extract-binary.sh  package-lock.json  package.json  quod.html  test_collapse.html
.github/workflows/: build.yml
src/: drei.css  emacs.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: runner.html
