[package]
authors = ["Arthur A. Gleckler"]
description = "Web Editor with Emacs key bindings"
edition = "2021"
name = "drei"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "web_editor_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1"
reqwest = { version = "0.12.15", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-app = { version = "2.0.0-alpha.2" }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
